prevent double tap on mobile devices

--- a/projects/08-simon-game/src/css/styles.css
+++ b/projects/08-simon-game/src/css/styles.css
@@ -1,3 +1,7 @@
+* {
+  touch-action: manipulation;
+}
+
 body {
   text-align: center;
   background-color: #011f3f;
